# GTestCovered

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: my_library.h
src/: CMakeLists.txt  main.cpp  my_library.cpp
tests/: CMakeLists.txt  test_my_library.cpp
